--- a/arcade-contacts.html
+++ b/arcade-contacts.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="arcade center contact, My Arcade Center support, tycoon game help, arcade management contact, business simulation support, customer service, feedback, collaboration"
     />
-    <meta name="author" content="meetgamng.com" />
+    <meta name="author" content="2025 Meetgamng.com" />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
@@ -27,7 +27,7 @@
       content="https://meetgamng.com/arcade-contacts.html"
     />
     <meta property="og:image" content="./depict_center/favicon_500.jpg" />
-    <title>Meetgamng.com - Contact Us</title>
+    <title>2025 Meetgamng.com - Contact Us</title>
     <link
       rel="icon"
       type="image/x-icon"
@@ -62,9 +62,7 @@
                 <div class="contact-icon">📧</div>
                 <div class="contact-text">
                   <h3>Email</h3>
-                  <a href="mailto:connection@meetgamng.com"
-                    >connection@meetgamng.com</a
-                  >
+                  <span>connection@2025 Meetgamng.com</span>
                 </div>
               </div>
 
@@ -160,6 +158,5 @@
     <script src="./js/data.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/cookie-banner.js"></script>
-    <script src="./js/footer-loader.js"></script>
   </body>
 </html>
