--- a/arcade-news.html
+++ b/arcade-news.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="arcade center news, My Arcade Center updates, tycoon game features, arcade management updates, business simulation news, arcade empire community, new arcade machines"
     />
-    <meta name="author" content="meetgamng.com" />
+    <meta name="author" content="2025 Meetgamng.com" />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
@@ -24,7 +24,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://meetgamng.com/arcade-news.html" />
     <meta property="og:image" content="./depict_center/favicon_500.jpg" />
-    <title>Meetgamng.com - Latest News & Updates</title>
+    <title>2025 Meetgamng.com - Latest News & Updates</title>
     <link
       rel="icon"
       type="image/x-icon"
