--- a/arcade-privacy.html
+++ b/arcade-privacy.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="arcade center privacy, My Arcade Center privacy policy, data protection, personal information, tycoon game privacy, business simulation privacy, user rights"
     />
-    <meta name="author" content="meetgamng.com" />
+    <meta name="author" content="2025 Meetgamng.com" />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
@@ -27,7 +27,7 @@
       content="https://meetgamng.com/arcade-privacy.html"
     />
     <meta property="og:image" content="./depict_center/favicon_500.jpg" />
-    <title>Meetgamng.com - Privacy Policy</title>
+    <title>2025 Meetgamng.com - Privacy Policy</title>
     <link
       rel="icon"
       type="image/x-icon"
@@ -249,7 +249,7 @@
               practices, please contact us at:
             </p>
             <ul>
-              <li>Email: connection@meetgamng.com</li>
+              <li>Email: connection@2025 Meetgamng.com</li>
               <li>Phone: +1 (393) 555-6868</li>
               <li>
                 Address: 87 Main Street, Thunder Bay, Ontario P7A 1A1, Canada
