--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="build, Machine, Simulation, arcade center, idle tycoon, business simulation, retro games, arcade management, tycoon game, idle game"
     />
-    <meta name="author" content="meetgamng.com" />
+    <meta name="author" content="2025 Meetgamng.com" />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
@@ -25,7 +25,7 @@
     <meta property="og:url" content="https://meetgamng.com" />
     <meta property="og:image" content="./depict_center/favicon_500.jpg" />
     <title>
-      Meetgamng.com - My Arcade Center - Build Your Retro Game Empire
+      2025 Meetgamng.com - My Arcade Center - Build Your Retro Game Empire
     </title>
     <link
       rel="icon"
