--- a/arcade-disclaimer.html
+++ b/arcade-disclaimer.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="arcade center disclaimer, My Arcade Center tycoon guide, business simulation safety, health guidelines, screen time management, user responsibilities, game information"
     />
-    <meta name="author" content="meetgamng.com" />
+    <meta name="author" content="2025 Meetgamng.com" />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
@@ -27,7 +27,7 @@
       content="https://meetgamng.com/arcade-disclaimer.html"
     />
     <meta property="og:image" content="./depict_center/favicon_500.jpg" />
-    <title>Meetgamng.com - Tycoon's Guide</title>
+    <title>2025 Meetgamng.com - Tycoon's Guide</title>
     <link
       rel="icon"
       type="image/x-icon"
@@ -173,7 +173,7 @@
               please contact us at:
             </p>
             <ul>
-              <li>Email: connection@meetgamng.com</li>
+              <li>Email: connection@2025 Meetgamng.com</li>
               <li>Phone: +1 (393) 555-6868</li>
               <li>
                 Address: 87 Main Street, Thunder Bay, Ontario P7A 1A1, Canada
